intel/bench_214_new/extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main/log.txt
bench_214_new/extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main/extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main.c:39:17: error: expected unqualified-id
  const float (*)[2] x;
                ^
bench_214_new/extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main/extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main.c:40:11: error: expected expression
  float (*)[2][2] phi;
          ^
bench_214_new/extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main/extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main.c:41:23: error: use of undeclared identifier 'x'
  sbr_autocorrelate_c(x, phi);
                      ^
bench_214_new/extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main/extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main.c:41:26: error: use of undeclared identifier 'phi'
  sbr_autocorrelate_c(x, phi);
                         ^
4 errors generated.
HLS FPGA Parse FAILED.
